--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,9 +4,9 @@ global:
 scrape_configs:
   - job_name: 'time-recorder'
     static_configs:
-      - targets: ['time-recorder-app:3000']
+      - targets: ['time-recorder:3000']
 
   - job_name: 'jenkins'
-    metrics_path: '/prometheus'
+    metrics_path: /prometheus
     static_configs:
-      - targets: ['167.17.182.146:8080'] 
+      - targets: ['host.docker.internal:8080']  # <-- сюда адрес твоего Jenkins
